DOCKER-K8S/k8s/manifest/node-db-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet

metadata:
  name: node-db

spec:
  serviceName: db-node
  replicas: 1
  selector:
    matchLabels:
      app: node-db

  template:
    metadata:
      labels:
        app: node-db

    spec:
      containers:
        - name: mysql
          image: mysql:latest
          ports:
            - containerPort: 3306

          volumeMounts:
            - name: node-db-storage
              mountPath: /var/lib/mysql

  volumeClaimTemplates:
    - metadata:
        name: node-db-storage

      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 1Gi # Capacité de stocage 1Go
