DOCKER-K8S/k8s/manifest/nginx-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: app-html-nginx

spec:
  type: ClusterIP

  selector:
    app: app-nginx

  ports:
    - port: 8080
      targetPort: 80
