DOCKER-K8S/k8s/manifest/node-db-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: db-node

spec:
  clusterIP: None

  selector:
    app: node-db

  ports:
    - port: 3306
