DOCKER-K8S/k8s/manifest/node-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: app-node

spec:
  type: ClusterIP

  selector:
    app: app-node

  ports:
    - port: 8080
      targetPort: 80
