DOCKER-K8S/k8s/manifest/nginx-full.yaml

apiVersion: v1
kind: Service

metadata:
  name: app-html-nginx

spec:
  type: ClusterIP

  selector:
    app: app-nginx

  ports:
    - port: 8080
      targetPort: 80

---

apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: ing-app-html-nginx

spec:
  rules:
    - host: app-html-nginx.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-html-nginx # Le nom du service
                port:
                  number: 8080 # Le port du service
