DOCKER-K8S/k8s/manifest/node-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: ing-app-node

spec:
  rules:
    - host: app-node.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-node # Le nom du service
                port:
                  number: 8080 # Le port du service
